modification in City, Subdivision Views